--- a/Fuentes/MisConciertos/app/src/main/res/values/dimens.xml
+++ b/Fuentes/MisConciertos/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="tamanioLetra">20sp</dimen>
     <dimen name="paddingGeneral">8dp</dimen>
+    <dimen name="tamanioImagen">40dp</dimen>
 </resources>
